--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(rgba(17, 1, 240, 0.301),rgba(2, 0, 0, 0.527)),url(284798.jpg);
+    background-image: linear-gradient(rgba(17, 1, 240, 0.301),rgba(2, 0, 0, 0.527)),url(49263.jpg);
     background-attachment: fixed;
     background-position: fixed;
     width: 100%;
@@ -49,3 +49,66 @@ body{
 }
 .form-radio{
     width: 100%;
+}
+.form-radio label input{
+    line-height: 40px;    
+}
+#survey-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+}
+.form-control label{
+    line-height: 40px;
+}
+.form-control input{
+    margin-bottom: 20px;
+    line-height: 30px;
+    border-radius: 5px;
+    border: none;
+    padding-left: 10px;
+    font-size: 16px;
+}
+.form-control p{
+    margin-bottom: 5px;
+}
+.form-control div input{
+    line-height: 20px;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 0;
+}
+.form-control div label{
+    padding-left: 10px;
+    /* justify-content: center;
+    align-items: center; */
+    padding-bottom: 20px;
+}
+#button {
+    width: 100%;
+    padding: 15px;
+    margin-top: 20px;
+    background-color:  #37af65;
+    border: none;
+    border-radius: 4px;
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+}
+#textarea {
+    line-height: 15px;
+    /* background-color: rgb(196, 193, 193); */
+    padding: 30px 20px;
+    font-size: 18px;
+}
+#dropdown  {
+    /* line-height: px; */
+    height: 35px;
+    font-size: 18px;
+    padding-left: 10px;
+}
+#dropdown option span:hover {
+    background-color: brown ;
+}
